# Medeputy-835

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: parser.py  segment.py
src/medeputy835/: data_element.py  parser.py  segment.py
src/x12_segment_parser/: __init__.py  data_element.py  delimiters.py  parser.py  segment.py
tests/: test_data_element.py  test_parser.py  test_segment.py
