[project]
name = "Medeputy-835"
version = "0.1.1"
authors = [
        { name="Jaraad Kamal", email="jkamal@pistevodecision.com" },
]
description = "A small package that breaks down X12 files into segments"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
        "pytest>=9.0",
        "pytest-mock>=3.0",
        "pytest-cov>=7.0",
        "build>=1.4",
        "twine>=6.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov-report=html --cov-report=lcov --cov-report=term"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
        "*/tests/*",
        "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
        "pragma: no cover",
        "if __name__ == .__main__.:",
        "raise NotImplementedError",
        "pass",
]

[tool.coverage.html]
directory = "coverage/htmlcov"

[tool.coverage.lcov]
output = "coverage/lcov.info"

[project.urls]
Homepage = "https://github.com/pistevo-decision/Medeputy-835"
Issues = "https://github.com/pistevo-decision/Medeputy-835/issues"